WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170668
test262: test262/test/built-ins/NativeErrors/EvalError/proto.js
https://bugs.webkit.org/show_bug.cgi?id=170668
Summary
test262: test262/test/built-ins/NativeErrors/EvalError/proto.js
Joseph Pecoraro
Reported
2017-04-10 01:30:53 PDT
test262/test/built-ins/NativeErrors/EvalError/proto.js Simplified: assert( Object.getPrototypeOf(EvalError) === Error ) Spec:
https://tc39.github.io/ecma262/#sec-properties-of-the-nativeerror-constructors
> 19.5.6.2Properties of the NativeError Constructors
>
> The value of the [[Prototype]] internal slot of a NativeError > constructor is the intrinsic object %Error%.
This affects all NativeError Constructors (EvalError, RangeError, TypeError, etc.) Notes: - Chrome passes this test Object.getPrototypeOf(EvalError) === Error - Safari, Firefox, and Edge are all currently: Object.getPrototypeOf(EvalError) === Function.prototype Given 3 browsers have same behavior we might want to consider changing the spec.
Attachments
[PATCH] Proposed Fix
(13.22 KB, patch)
2017-04-10 01:37 PDT
,
Joseph Pecoraro
joepeck
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-elcapitan
(938.88 KB, application/zip)
2017-04-10 02:51 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews107 for mac-elcapitan-wk2
(888.93 KB, application/zip)
2017-04-10 02:55 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews117 for mac-elcapitan
(1.71 MB, application/zip)
2017-04-10 03:00 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews126 for ios-simulator-wk2
(904.20 KB, application/zip)
2017-04-10 03:16 PDT
,
Build Bot
no flags
Details
[PATCH] Proposed Fix
(18.88 KB, patch)
2017-04-10 23:07 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2017-04-10 01:37:29 PDT
Created
attachment 306670
[details]
[PATCH] Proposed Fix Again, we may want to change the spec, so setting cq- for now.
Build Bot
Comment 2
2017-04-10 02:14:17 PDT
Comment on
attachment 306670
[details]
[PATCH] Proposed Fix
Attachment 306670
[details]
did not pass jsc-ews (mac): Output:
http://webkit-queues.webkit.org/results/3510265
New failing tests: ChakraCore.yaml/ChakraCore/test/Lib/error.js.default
Build Bot
Comment 3
2017-04-10 02:51:06 PDT
Comment on
attachment 306670
[details]
[PATCH] Proposed Fix
Attachment 306670
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/3510365
New failing tests: ietestcenter/Javascript/15.2.3.2-2-16.html ietestcenter/Javascript/15.2.3.2-2-14.html ietestcenter/Javascript/15.2.3.2-2-12.html ietestcenter/Javascript/15.2.3.2-2-13.html ietestcenter/Javascript/15.2.3.2-2-15.html ietestcenter/Javascript/15.2.3.2-2-17.html
Build Bot
Comment 4
2017-04-10 02:51:11 PDT
Created
attachment 306673
[details]
Archive of layout-test-results from ews103 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 5
2017-04-10 02:55:23 PDT
Comment on
attachment 306670
[details]
[PATCH] Proposed Fix
Attachment 306670
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/3510368
New failing tests: ietestcenter/Javascript/15.2.3.2-2-16.html ietestcenter/Javascript/15.2.3.2-2-14.html ietestcenter/Javascript/15.2.3.2-2-12.html ietestcenter/Javascript/15.2.3.2-2-13.html ietestcenter/Javascript/15.2.3.2-2-15.html ietestcenter/Javascript/15.2.3.2-2-17.html
Build Bot
Comment 6
2017-04-10 02:55:25 PDT
Created
attachment 306674
[details]
Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 7
2017-04-10 03:00:41 PDT
Comment on
attachment 306670
[details]
[PATCH] Proposed Fix
Attachment 306670
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/3510369
New failing tests: ietestcenter/Javascript/15.2.3.2-2-16.html ietestcenter/Javascript/15.2.3.2-2-14.html ietestcenter/Javascript/15.2.3.2-2-12.html ietestcenter/Javascript/15.2.3.2-2-13.html ietestcenter/Javascript/15.2.3.2-2-15.html ietestcenter/Javascript/15.2.3.2-2-17.html
Build Bot
Comment 8
2017-04-10 03:00:42 PDT
Created
attachment 306676
[details]
Archive of layout-test-results from ews117 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 9
2017-04-10 03:16:09 PDT
Comment on
attachment 306670
[details]
[PATCH] Proposed Fix
Attachment 306670
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/3510378
New failing tests: ietestcenter/Javascript/15.2.3.2-2-16.html ietestcenter/Javascript/15.2.3.2-2-14.html ietestcenter/Javascript/15.2.3.2-2-12.html ietestcenter/Javascript/15.2.3.2-2-13.html ietestcenter/Javascript/15.2.3.2-2-15.html ietestcenter/Javascript/15.2.3.2-2-17.html
Build Bot
Comment 10
2017-04-10 03:16:10 PDT
Created
attachment 306677
[details]
Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Joseph Pecoraro
Comment 11
2017-04-10 23:07:22 PDT
Created
attachment 306780
[details]
[PATCH] Proposed Fix Still wondering if we should just change the spec here.
Keith Miller
Comment 12
2017-04-12 19:42:18 PDT
Comment on
attachment 306780
[details]
[PATCH] Proposed Fix I think it's pretty reasonable in the current spec. This change means that EvalError.__proto__.prototype === EvalError.prototype.__proto__, which should probably be true.
Keith Miller
Comment 13
2017-04-12 19:42:39 PDT
r=me.
Joseph Pecoraro
Comment 14
2017-04-12 19:44:17 PDT
Comment on
attachment 306780
[details]
[PATCH] Proposed Fix Makes sense to me.
WebKit Commit Bot
Comment 15
2017-04-12 20:12:12 PDT
Comment on
attachment 306780
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 306780 Committed
r215312
: <
http://trac.webkit.org/changeset/215312
>
WebKit Commit Bot
Comment 16
2017-04-12 20:12:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug