test262: test262/test/built-ins/NativeErrors/EvalError/proto.js https://bugs.webkit.org/show_bug.cgi?id=170668

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-04-12
Reviewed by Keith Miller.

JSTests:

* ChakraCore.yaml:
* ChakraCore/test/Lib/error.baseline-jsc: Added.
This test does not match the spec.

* test262.yaml:

Source/JavaScriptCore:

* runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::init):
The [[Prototype]] of NativeError Constructor's should be the %Error%.
https://tc39.github.io/ecma262/#sec-properties-of-the-nativeerror-constructors

LayoutTests:

* ietestcenter/Javascript/15.2.3.2-2-12-expected.txt:
* ietestcenter/Javascript/15.2.3.2-2-13-expected.txt:
* ietestcenter/Javascript/15.2.3.2-2-14-expected.txt:
* ietestcenter/Javascript/15.2.3.2-2-15-expected.txt:
* ietestcenter/Javascript/15.2.3.2-2-16-expected.txt:
* ietestcenter/Javascript/15.2.3.2-2-17-expected.txt:
These tests are now out of date.

Canonical link: https://commits.webkit.org/187730@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215312 268f45cc-cd09-0410-ab3c-d52691b4dbfc